# test-camera

./: .gitignore  CMakeLists.txt  Makefile  README  cross-build.sh  main.cpp  static-build-firefly.sh  static-build.sh
cmake/: FindOpenCV.cmake  OpenCVModules.cmake
src/: main.cpp
